--- a/JS MODERNO/index.html
+++ b/JS MODERNO/index.html
@@ -17,11 +17,12 @@
         <h2 class="text-2xl font-semibold" id="titulo-1">Primer Ejercicio</h2>
     </div>
 
-    <script src="script.js"></script>
+    <button id="boton">Aparecer un texto</button>
+
+    <script src="script2.js"></script>
 </body>
 </html>
 
 /*24-04-2024*/
 
 /*25-04-2024*/
-...en curso
