--- a/JS MODERNO II/index.html
+++ b/JS MODERNO II/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>JS MODERNO II / MAS JS Y MAS MODERNO QUE NUNCA</h1>
-    <script src="script-2.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
+
+/*26/04/2024*/
