--- a/INTRODUCCION JS/EJERCICIO JS 1/index.html
+++ b/INTRODUCCION JS/EJERCICIO JS 1/index.html
@@ -9,9 +9,9 @@
 <body class="bg-yellow-400 flex flex-col items-center justify-center h-screen">
 
     <div>
-        <button id="increment" onclick="incremento()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">+</button>
-        <button id="decrement" onclick="reseteo()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">Resetear</button>
-        <button id="reset" onclick="decremento()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">-</button>
+        <button id="decrement" onclick="decremento()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">-</button>
+        <button id="reset" onclick="reseteo()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">Resetear</button>
+        <button id="incremet" onclick="incremento()" class="bg-blue-500 text-white px-4 py-2 rounded mr-2">+</button>
     </div>
     <div id="counter" class="mt-4 font-bold text-4xl">0</div>
 
