--- a/INTRODUCCION JS II/index.html
+++ b/INTRODUCCION JS II/index.html
@@ -17,7 +17,7 @@
         <h2 class="text-2xl font-semibold" id="titulo-1">Primer Ejercicio</h2>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
 
